<resources>
    <string name="app_name">E-portal</string>
    <string name="User">User</string>
    <string name="Manager">Manager</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="password"> Password</string>
    <string name="login">Login</string>
    <string name="welcome">Sign in</string>
    <string name="please_login_to_get_access">Please Login to get access</string>
    <string name="email"> Email</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_dashboard_nav">dashboard_nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="please_enter_the_email">Please enter the email</string>
    <string name="send_email">Send Email</string>
    <string name="manger_s_section">Mangers Section</string>
    <string name="meeting_room">Meeting Room</string>
    <string name="add_task">Add Task</string>
    <string name="manager_ss_section">Managers Section</string>
    <string name="tasks">Tasks</string>
    <string name="calender">Calender</string>
    <string name="employee_s_section">E-Portal</string>
    <string name="home">Home</string>
    <string name="ITRequest">IT Request</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create_meeting">Create Meeting</string>
    <string name="meeting_settings">Meeting Settings</string>
    <string name="update">Update</string>
    <string name="add_request">Add Request</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="enter_email_here">Enter email here</string>
    <string name="e_portal">E-Portal</string>
    <string name="userphoto">UserPhoto</string>
    <string name="managerphoto">managerphoto</string>
    <string name="click_on_the_icon_to_redirect_to_zoom">Click on the icon to redirect to zoom</string>
    <string name="meeting_creation">Meeting Creation</string>
    <string name="zoom">zoom</string>
    <string name="available_meetings">Available meetings</string>
    <string name="title">Title</string>
    <string name="link">Link</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="add_it_request">Add IT request</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="name">Name:</string>
    <string name="description">Description</string>
    <string name="enter_description_here">Enter description here</string>
    <string name="users_requests">Users Requests</string>
    <string name="names_will_be_here_soon">Names will be here soon</string>
    <string name="title_will_be_here_soon">Title will be here soon</string>
    <string name="description_will_be_here_soon">Description will be here soon</string>
    <string name="remove_request">remove request</string>
    <string name="if_you_are_an_it_click_here">If you are an IT click here</string>
    <string name="it_login">IT Login</string>
    <string name="admin_request">Manager Request</string>
    <string name="admin_requests">Manager Requests</string>
    <string name="managers_requests">Managers Requests</string>
    <string name="jan_01_2020">Jan 01 2020</string>
    <string name="to">To</string>
    <string name="annual_leave">Annual Leave</string>
    <string name="from">From</string>
    <string name="add_manager">Add Manager</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="add_user">Add User</string>
    <string name="enter_name">Enter name</string>
    <string name="employee_s_name">Employee Name</string>
    <string name="login_time">Login Time</string>
    <string name="add_your_name">Add Your Name</string>
    <string name="view_leaves">View Leaves</string>
    <string name="submit_leave">Submit Leave</string>
    <string name="get_your_task_file">Get Your Task File</string>
    <string name="press_below_to_get_your_task_s_attachment">Press Below To Get Your Tasks Attachment</string>
    <string name="select_pdf_file">Select Pdf File</string>
    <string name="check_employee_s_logs">Check Employee logs</string>
    <string name="employee_leave_request">Employee Leave Request</string>
    <string name="name1">Name</string>
    <string name="it">IT</string>

</resources>