<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".IT.AddManager">

    <TextView
        android:paddingVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/name"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:paddingVertical="8dp"
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/enter_name"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/email"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:paddingVertical="8dp"
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/enter_email"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/password"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:paddingTop="8dp"
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:autoLink="web"
        android:clickable="true"
        android:hint="@string/enter_password"
        android:padding="8dp"
        android:textSize="18sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Addnewmanager"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:text="@string/add_manager"
        android:textAllCaps="false"
        android:textColor="@color/Black"
        android:textSize="25sp" />

</LinearLayout>