<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".manager.ManagerItRequestActivity">

    <Button
        android:id="@+id/btn_users_requests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_button"
        android:onClick="Users_requests"
        android:padding="16dp"
        android:text="@string/users_requests"
        android:textAllCaps="false"
        android:textColor="@color/Black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add_it_request"
        android:textColor="@color/White"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/conl"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/conl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/name"
            android:textColor="@color/Black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/et_name" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_your_name_here"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="@color/Black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_name"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/title"
            android:textColor="@color/Black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/et_title"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_title_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/Black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/description"
            android:textColor="@color/Black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/et_title"
            app:layout_constraintBottom_toTopOf="@id/et_description" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:clickable="true"
            android:hint="@string/enter_description_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="16dp"
            android:paddingVertical="32dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            tools:ignore="LabelFor" />
        <Button
            android:id="@+id/btn_addrequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_button"
            android:onClick="addrequest"
            android:padding="16dp"
            android:text="@string/add_request"
            android:textAllCaps="false"
            android:textColor="@color/Black"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/et_description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>