<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".Forgetpassword">
    <LinearLayout
        android:id="@+id/LL_Addmanager"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bg_button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/forgot_password"
            android:textColor="#fff"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="128dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LL_Addmanager">


    <TextView
        android:id="@+id/enteremail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:text="@string/please_enter_your_email_address"
        android:textSize="20sp" />

    <EditText
        android:layout_marginTop="8dp"
        android:id="@+id/et_enteremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:paddingStart="4dp"
        android:hint="@string/enter_email_here"
        android:background="@drawable/rounded_button_login"
        android:textSize="30sp"
        android:inputType="textEmailAddress" />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:onClick="ForgotPassword"
        android:text="@string/send_email"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="25sp"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>